набросал базовую разметку

--- a/index.html
+++ b/index.html
@@ -8,5 +8,86 @@
   </head>
 <body>
 
+  <header class="page-header">
+    <h1 class="page-header__header"></h1>
+    <ul class="pate-header__list">
+      <li class="page-header__list-item"><a href="" class="page-header__link"></a></li>
+      <li class="page-header__list-item"><a href="" class="page-header__link"></a></li>
+      <li class="page-header__list-item"><a href="" class="page-header__link"></a></li>
+      <li class="page-header__list-item"><a href="" class="page-header__link"></a></li>
+      <li class="page-header__list-item"><a href="" class="page-header__link"></a></li>
+      <li class="page-header__list-item"><a href="" class="page-header__link"></a></li>
+    </ul>
+  </header>
+
+  <section class="page-content">
+    <article class="page-content__article  page-content__article--main">
+      <h2 class="page-content__header"></h2>
+      <p class="page-content__text"><span class="page-content__time"></span></p>
+    </article>
+    <article class="page-content__article">
+      <h2 class="page-content__header"></h2>
+      <p class="page-content__text"><span class="page-content__time"></span></p>
+    </article>
+    <article class="page-content__article">
+      <h2 class="page-content__header"></h2>
+      <p class="page-content__text"><span class="page-content__time"></span></p>
+    </article>
+  </section>
+
+  <aside class="sidebar">
+
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+    <div class="sidebar__item">
+      <time class="sidebar__time"></time>
+      <span class="sidebar__category"></span>
+      <p class="sidebar__description"></p>
+    </div>
+
+    <nav class="sidebar__navigation">
+      <button class="sidebar__up-button"></button>
+      <button class="sidebar__news-button"></button>
+    </nav>
+
+  </aside>
 </body>
 </html>
