основные стили для блока с новостями

--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
 
     <section class="page-content">
       <article class="page-content__article  page-content__article--main">
-        <img src="img/voynow.jpg" alt="фото Войнова" class="page-content__image  page-content__image--main">
-        <h2 class="page-content__header">Войнова вывели из состава клуба, а на его место взяли другого хоккеиста</h2>
-        <p class="page-content__text"><time class="page-content__time">11:00</time>Российский защитник клуба НХЛ «Лос-Анджелеса Кингз» не сможет тренироваться и играть, пока в суде не закроют его дело</p>
+        <img src="img/voynow.jpg" alt="фото Войнова" class="page-content__image  page-content__image--main"><!--
+        --><h2 class="page-content__header  page-content__header--main">Войнова вывели из состава клуба, а на его место взяли другого хоккеиста</h2>
+        <p class="page-content__text  page-content__text--main"><time class="page-content__time  page-content__time--main">11:00</time>Российский защитник клуба НХЛ «Лос-Анджелеса Кингз» не сможет тренироваться и играть, пока в суде не закроют его дело</p>
       </article>
       <article class="page-content__article">
-        <img src="img/emelyanenko.jpg" alt="фото Емельяненко" class="page-content__image">
-        <h2 class="page-content__header">Емельяненко решил жениться в СИЗО<span class="comments-counter">12</span></h2>
+        <img src="img/emelyanenko.jpg" alt="фото Емельяненко" class="page-content__image"><!--
+        --><h2 class="page-content__header  page-content__header--blue">Емельяненко решил жениться в СИЗО<span class="comments-counter">12</span></h2>
         <p class="page-content__text"><time class="page-content__time">10:00</time>Скандальный боец смешанных единоборств Александ Емельяненко, находящийся под арестом с 10 мая 2014 года, хочет сыграть свадьбу в следственном изоляторе</p>
       </article>
       <article class="page-content__article">
-        <img src="img/voevoda.jpg" alt="фото Воеводы" class="page-content__image">
-        <h2 class="page-content__header">Алексея Воеводу не включили в список участников Олимпиады 2018 года<span class="comments-counter">12</span></h2>
+        <img src="img/voevoda.jpg" alt="фото Воеводы" class="page-content__image"><!--
+        --><h2 class="page-content__header  page-content__header--blue">Алексея Воеводу не включили в список участников Олимпиады 2018 года<span class="comments-counter">12</span></h2>
         <p class="page-content__text"><time class="page-content__time">10:00</time>Причины такого решения спортсмену никто не объяснил</p>
       </article>
     </section>
