закончил стили для изначального макета

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тестовое задание для Site-master</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <link href="http://allfont.ru/allfont.css?fonts=lucida-sans-unicode" rel="stylesheet" type="text/css" />
-    <link href="http://allfont.ru/allfont.css?fonts=open-sans" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
 <body>
 
@@ -16,6 +14,7 @@
     <ul class="page-header__list">
       <li class="page-header__list-item"><a href="" class="page-header__link">Спорт</a></li>
       <li class="page-header__list-item"><a href="" class="page-header__link">ФК Зенит</a></li>
+      <li class="page-header__list-item"><a href="" class="page-header__link">Советский спорт</a></li>
       <li class="page-header__list-item"><a href="" class="page-header__link">«Советский спорт» в Санкт-Петербурге</a></li>
       <li class="page-header__list-item"><a href="" class="page-header__link">Олимпиада в Сочи 2014: Вся олимпийская сборная России</a></li>
       <li class="page-header__list-item"><a href="" class="page-header__link">Футбол</a></li>
@@ -29,43 +28,61 @@
 
       <div class="sidebar__item">
         <time class="sidebar__time">14:44</time>
-        <p class="sidebar__description"><span class="sidebar__category">Хоккей</span>Андрей Николишин: Ближайшие матчи «Трактора» с «Ладой» и «Нефтехимиком» - это битва за 12 очков</p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>Андрей Николишин: Ближайшие матчи «Трактора» с «Ладой» и «Нефтехимиком» - это битва за 12 очков
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">14:43</time>
-        <p class="sidebar__description"><span class="sidebar__category">Футбол</span>Ибрагимович собирается выступить на Олимпиаде-2016<span class="comments-counter">11</span></p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Ибрагимович собирается выступить на Олимпиаде-2016<span class="comments-counter">11</span>
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">14:43</time>
-        <p class="sidebar__description"><span class="sidebar__category">Футбол</span>Владимир Стогиенко: То, что сейчас происходит с «Зенитом», вряд ли кого-то устраивает</p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Владимир Стогиенко: То, что сейчас происходит с «Зенитом», вряд ли кого-то устраивает
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">14:29</time>
-        <p class="sidebar__description"><span class="sidebar__category">Хоккей</span>«Автомобилист» обыграл «Амур» в матче регулярного чемпионат КХЛ<span class="comments-counter">3</span></p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>«Автомобилист» обыграл «Амур» в матче регулярного чемпионат КХЛ<span class="comments-counter">3</span>
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">14:26</time>
-        <p class="sidebar__description"><span class="sidebar__category">Бокс</span>Андрей Рябинский: «Мир бокса» не будет подписывать контракт с Проводниковым<span class="comments-counter">6</span></p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--red">Бокс</span>Андрей Рябинский: «Мир бокса» не будет подписывать контракт с Проводниковым<span class="comments-counter">6</span>
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">14:10</time>
-        <p class="sidebar__description"><span class="sidebar__category">Хоккей</span>КХЛ. ЦСКА - «Локомотив», СКА - «Динамо» Мск и другие матчи. LIVE<span class="comments-counter">22</span></p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>КХЛ. ЦСКА - «Локомотив», СКА - «Динамо» Мск и другие матчи. LIVE<span class="comments-counter">22</span>
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">13:41</time>
-        <p class="sidebar__description"><span class="sidebar__category">Футбол</span>Сергею Овчинникову на день рождения подарили торт</p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Сергею Овчинникову на день рождения подарили торт
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">13:32</time>
-        <p class="sidebar__description"><span class="sidebar__category">Футбол</span>Набиуллин не сыграет за молодёжную сборную</p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Набиуллин не сыграет за молодёжную сборную
+        </p>
       </div>
       <div class="sidebar__item">
         <time class="sidebar__time">13:29</time>
-        <p class="sidebar__description"><span class="sidebar__category">Хоккей</span>Чистов стал лучшим игроком года по безконтактным шашкам</p>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>Чистов стал результативнейшим игроком года по безконтактным шашкам
+        </p>
       </div>
 
       <nav class="sidebar__navigation">
-        <button class="sidebar__up-button"><img src="img/button-arrow" alt="up"></button>
+        <button class="sidebar__up-button"><img src="img/button.png" alt="up"></button>
         <button class="sidebar__news-button">Показать ещё новости</button>
       </nav>
 
@@ -80,7 +97,7 @@
       <article class="page-content__article">
         <img src="img/emelyanenko.jpg" alt="фото Емельяненко" class="page-content__image"><!--
         --><h2 class="page-content__header  page-content__header--blue">Емельяненко решил жениться в СИЗО<span class="comments-counter">12</span></h2>
-        <p class="page-content__text"><time class="page-content__time">10:00</time>Скандальный боец смешанных единоборств Александ Емельяненко, находящийся под арестом с 10 мая 2014 года, хочет сыграть свадьбу в следственном изоляторе</p>
+        <p class="page-content__text"><time class="page-content__time">10:00</time>Скандальный российский боец смешанных единоборств Александр Емельяненко, находящийся под арестом с 10 мая 2014 года, хочет сыграть свадьбу в следственном изоляторе</p>
       </article>
       <article class="page-content__article">
         <img src="img/voevoda.jpg" alt="фото Воеводы" class="page-content__image"><!--
