--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <header class="page-header">
     <h1 class="page-header__header">Спорт</h1>
     <ul class="page-header__list">
-      <li class="page-header__list-item"><a href="" class="page-header__link">Спорт</a></li>
-      <li class="page-header__list-item"><a href="" class="page-header__link">ФК Зенит</a></li>
-      <li class="page-header__list-item"><a href="" class="page-header__link">Советский спорт</a></li>
-      <li class="page-header__list-item"><a href="" class="page-header__link">«Советский спорт» в Санкт-Петербурге</a></li>
-      <li class="page-header__list-item"><a href="" class="page-header__link">Олимпиада в Сочи 2014: Вся олимпийская сборная России</a></li>
-      <li class="page-header__list-item"><a href="" class="page-header__link">Футбол</a></li>
+      <li class="page-header__list-item"><a href="#" class="page-header__link">Спорт</a></li>
+      <li class="page-header__list-item"><a href="#" class="page-header__link">ФК Зенит</a></li>
+      <li class="page-header__list-item"><a href="#" class="page-header__link">Советский спорт</a></li>
+      <li class="page-header__list-item"><a href="#" class="page-header__link">«Советский спорт» в Санкт-Петербурге</a></li>
+      <li class="page-header__list-item"><a href="#" class="page-header__link">Олимпиада в Сочи 2014: Вся олимпийская сборная России</a></li>
+      <li class="page-header__list-item"><a href="#" class="page-header__link">Футбол</a></li>
     </ul>
   </header>
 
@@ -108,6 +108,8 @@
 
 
   </div>
+
+  <script src="js/main.js"></script>
 
 </body>
 </html>
