--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
   </header>
 
   <div class="page-container">
+
+    <section class="page-content">
+      <article class="page-content__article  page-content__article--main">
+        <div class="page-content__main-block">
+          <img src="img/voynow.jpg" alt="фото Войнова" class="page-content__image  page-content__image--main">
+          <h2 class="page-content__header  page-content__header--main">Войнова вывели из состава клуба, а на его место взяли другого хоккеиста</h2>
+        </div>
+        <p class="page-content__text  page-content__text--main"><time class="page-content__time  page-content__time--main">11:00</time>Российский защитник клуба НХЛ «Лос-Анджелеса Кингз» не сможет тренироваться и играть, пока в суде не закроют его дело</p>
+      </article>
+      <article class="page-content__article">
+        <img src="img/emelyanenko.jpg" alt="фото Емельяненко" class="page-content__image"><!--
+        --><h2 class="page-content__header  page-content__header--blue">Емельяненко решил жениться в СИЗО<span class="comments-counter">12</span></h2>
+        <p class="page-content__text"><time class="page-content__time">10:00</time>Скандальный российский боец смешанных единоборств Александр Емельяненко, находящийся под арестом с 10 мая 2014 года, хочет сыграть свадьбу в следственном изоляторе</p>
+      </article>
+      <article class="page-content__article">
+        <img src="img/voevoda.jpg" alt="фото Воеводы" class="page-content__image"><!--
+        --><h2 class="page-content__header  page-content__header--blue">Алексея Воеводу не включили в список участников Олимпиады 2018 года<span class="comments-counter">12</span></h2>
+        <p class="page-content__text"><time class="page-content__time">10:00</time>Причины такого решения спортсмену никто не объяснил</p>
+      </article>
+    </section>
+
     <aside class="sidebar">
 
       <h2 class="sidebar__header">Новости спорта</h2>
@@ -87,24 +108,6 @@
       </nav>
 
     </aside>
-
-    <section class="page-content">
-      <article class="page-content__article  page-content__article--main">
-        <img src="img/voynow.jpg" alt="фото Войнова" class="page-content__image  page-content__image--main"><!--
-        --><h2 class="page-content__header  page-content__header--main">Войнова вывели из состава клуба, а на его место взяли другого хоккеиста</h2>
-        <p class="page-content__text  page-content__text--main"><time class="page-content__time  page-content__time--main">11:00</time>Российский защитник клуба НХЛ «Лос-Анджелеса Кингз» не сможет тренироваться и играть, пока в суде не закроют его дело</p>
-      </article>
-      <article class="page-content__article">
-        <img src="img/emelyanenko.jpg" alt="фото Емельяненко" class="page-content__image"><!--
-        --><h2 class="page-content__header  page-content__header--blue">Емельяненко решил жениться в СИЗО<span class="comments-counter">12</span></h2>
-        <p class="page-content__text"><time class="page-content__time">10:00</time>Скандальный российский боец смешанных единоборств Александр Емельяненко, находящийся под арестом с 10 мая 2014 года, хочет сыграть свадьбу в следственном изоляторе</p>
-      </article>
-      <article class="page-content__article">
-        <img src="img/voevoda.jpg" alt="фото Воеводы" class="page-content__image"><!--
-        --><h2 class="page-content__header  page-content__header--blue">Алексея Воеводу не включили в список участников Олимпиады 2018 года<span class="comments-counter">12</span></h2>
-        <p class="page-content__text"><time class="page-content__time">10:00</time>Причины такого решения спортсмену никто не объяснил</p>
-      </article>
-    </section>
 
 
   </div>
