реализовал логику добавления новостей

--- a/index.html
+++ b/index.html
@@ -98,7 +98,52 @@
       <div class="sidebar__item">
         <time class="sidebar__time">13:29</time>
         <p class="sidebar__description">
-          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>Чистов стал результативнейшим игроком года по безконтактным шашкам
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>Чистов стал результативнейшим игроком года по бесконтактным шашкам
+        </p>
+      </div>
+
+      <!--открывающиеся только по нажатию кнопки новости-->
+
+      <div class="sidebar__item">
+        <time class="sidebar__time">14:43</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Владимир Стогиенко: То, что сейчас происходит с «Зенитом», вряд ли кого-то устраивает
+        </p>
+      </div>
+      <div class="sidebar__item">
+        <time class="sidebar__time">14:29</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>«Автомобилист» обыграл «Амур» в матче регулярного чемпионат КХЛ<span class="comments-counter">3</span>
+        </p>
+      </div>
+      <div class="sidebar__item">
+        <time class="sidebar__time">14:26</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--red">Бокс</span>Андрей Рябинский: «Мир бокса» не будет подписывать контракт с Проводниковым<span class="comments-counter">6</span>
+        </p>
+      </div>
+      <div class="sidebar__item">
+        <time class="sidebar__time">14:10</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>КХЛ. ЦСКА - «Локомотив», СКА - «Динамо» Мск и другие матчи. LIVE<span class="comments-counter">22</span>
+        </p>
+      </div>
+      <div class="sidebar__item">
+        <time class="sidebar__time">13:41</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Сергею Овчинникову на день рождения подарили торт
+        </p>
+      </div>
+      <div class="sidebar__item">
+        <time class="sidebar__time">13:32</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--green">Футбол</span>Набиуллин не сыграет за молодёжную сборную
+        </p>
+      </div>
+      <div class="sidebar__item">
+        <time class="sidebar__time">13:29</time>
+        <p class="sidebar__description">
+          <span class="sidebar__category  sidebar__category--blue">Хоккей</span>Чистов стал результативнейшим игроком года по бесконтактным шашкам
         </p>
       </div>
 
